# WMRenewal

WMRUST/: ARCHITECT_PROMPT.md  BUILDER_PROMPT.md  CONTRIBUTING.md  Cargo.toml  PLAN_STATUS.md  PROJECT_PLAN.md  resources
WMRUST/.github/workflows/: ci.yml
WMRUST/crates/wm-app/: Cargo.toml
WMRUST/crates/wm-app/src/: main.rs
WMRUST/crates/wm-core/: Cargo.toml
WMRUST/crates/wm-core/src/: config.rs  enums.rs  girl.rs  gold.rs  item.rs  lib.rs  room.rs  screen.rs  traits.rs
WMRUST/crates/wm-edit/: Cargo.toml
WMRUST/crates/wm-edit/src/: app.rs  girls_tab.rs  items_tab.rs  main.rs  traits_tab.rs
WMRUST/crates/wm-game/: Cargo.toml
WMRUST/crates/wm-game/src/: brothel.rs  combat.rs  customers.rs  dungeon.rs  gangs.rs  girls.rs  inventory.rs  lib.rs  player.rs  rivals.rs  state.rs  turn.rs
WMRUST/crates/wm-script/: Cargo.toml
WMRUST/crates/wm-ui/: Cargo.toml
WMRUST/crates/wm-ui/src/: events.rs  font.rs  graphics.rs  lib.rs  texture_cache.rs  xml_loader.rs
WMRUST/crates/wm-ui/src/screen/: bank.rs  brothel_management.rs  building_setup.rs  dialog.rs  dungeon.rs  gallery.rs  gang_management.rs  girl_details.rs  girl_management.rs  house.rs  intro.rs  item_management.rs  load_game.rs  main_menu.rs  mayor.rs  mod.rs  prison.rs  slave_market.rs  text_input.rs  town.rs  turn_summary.rs  walk_encounter.rs
WMRUST/crates/wm-ui/src/widget/: button.rs  checkbox.rs  editbox.rs  image_item.rs  listbox.rs  mod.rs  scrollbar.rs  slider.rs  text_item.rs
WMRUST/docs/: ASSET_REVIEW.md
WMRUST/plans/: plan.md
WMRUST/scripts/: package-release.ps1
(+20 files in other folders)
