[package]
name = "wm-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "whoremaster"
path = "src/main.rs"

[dependencies]
wm-core = { path = "../wm-core" }
wm-game = { path = "../wm-game" }
wm-ui = { path = "../wm-ui" }
wm-script = { path = "../wm-script" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sdl2 = { version = "0.37", features = ["bundled", "image", "ttf", "gfx", "unsafe_textures"] }
