[package]
name = "wm-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
wm-core = { path = "../wm-core" }
wm-game = { path = "../wm-game" }
wm-script = { path = "../wm-script" }
sdl2 = { version = "0.37", features = ["bundled", "image", "ttf", "unsafe_textures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize", "overlapped-lists"] }
thiserror = "2"
rand = "0.8"
